dev(regtest): temporarily change base image to wait-for-bitcoind
this commit should be reverted before merging

--- a/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/joinmarket-webui/jam-dev-standalone:master
+FROM ghcr.io/joinmarket-webui/jam-dev-standalone:wait-for-bitcoind
 
 COPY default.cfg ${DEFAULT_CONFIG}
 
