--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
   },
   "homepage": ".",
   "devDependencies": {
-    "@emotion/react": "^11.10.5",
-    "@popperjs/core": "^2.11.6",
-    "@table-library/react-table-library": "^4.0.23",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -21,30 +18,31 @@
     "@types/node": "^17.0.35",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "bootstrap": "^5.2.1",
-    "classnames": "^2.3.2",
     "conventional-changelog": "^3.1.25",
-    "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.6",
     "husky": "^8.0.1",
-    "i18next": "^22.0.4",
-    "i18next-browser-languagedetector": "^7.0.0",
     "jest-watch-typeahead": "^0.6.5",
     "jest-websocket-mock": "^2.4.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@table-library/react-table-library": "^4.0.23",
+    "bootstrap": "^5.2.2",
+    "classnames": "^2.3.2",
+    "formik": "^2.2.9",
+    "i18next": "^22.0.4",
+    "i18next-browser-languagedetector": "^7.0.1",
     "qrcode": "^1.5.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^17.0.2",
     "react-i18next": "^12.0.0",
     "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.7.2"
-  },
-  "dependencies": {
-    "serve": "14.0.1"
+    "react-router-dom": "^6.4.3"
   },
   "scripts": {
     "dev:start": "REACT_APP_JAM_DEV_MODE=true npm start",
