Revert "dev(regtest): temporarily change base image to wait-for-bitcoind"
This reverts commit 55f7c20a363e2adf98d98b325e0d704a52c75651.

--- a/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/joinmarket-webui/jam-dev-standalone:wait-for-bitcoind
+FROM ghcr.io/joinmarket-webui/jam-dev-standalone:master
 
 COPY default.cfg ${DEFAULT_CONFIG}
 
