--- a/docker/regtest/dockerfile-deps/joinmarket/directory_node/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/directory_node/Dockerfile
@@ -3,7 +3,7 @@ FROM debian:bullseye-20220801-slim
 RUN apt-get update \
     && apt-get install -qq --no-install-recommends gnupg tini procps vim git iproute2 supervisor \
        # joinmarket dependencies
-       curl build-essential automake pkg-config libtool python3-dev python3-pip python3-setuptools libltdl-dev \
+       curl build-essential automake pkg-config libtool python3-dev python3-venv python3-pip python3-setuptools libltdl-dev \
        # tor dependencies
        libevent-dev libssl-dev zlib1g-dev \
        && rm -rf /var/lib/apt/lists/*
