--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm ci
       # Checks
       - name: Lint
-        run: npm run lint
+        run: npm run lint -- --version && npm run lint -- --loglevel debug
       # Test
       - name: Test
         run: npm test
