--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.0.3",
     "@types/node": "^17.0.35",
+    "@types/qrcode": "^1.5.2",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "conventional-changelog": "^3.1.25",
