build(deps): update dependencies
 husky            ^8.0.3  →    ^9.1.4
 i18next        ^23.11.4  →  ^23.13.0
 lint-staged     ^14.0.1  →   ^15.2.9
 prettier         ^3.2.5  →    ^3.3.3
 react-i18next   ^14.1.1  →   ^15.0.1

--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@types/react-dom": "^18.3.0",
     "conventional-changelog": "^5.1.0",
     "http-proxy-middleware": "^3.0.0",
-    "husky": "^8.0.3",
+    "husky": "^9.1.4",
     "jest-watch-typeahead": "^2.2.2",
     "jest-websocket-mock": "^2.5.0",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.2.5",
+    "lint-staged": "^15.2.9",
+    "prettier": "^3.3.3",
     "react-scripts": "^5.0.1",
     "typescript": "^4.8.4"
   },
@@ -36,13 +36,13 @@
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
-    "i18next": "^23.11.4",
+    "i18next": "^23.13.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-i18next": "^14.1.1",
+    "react-i18next": "^15.0.1",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.26.1"
   },
@@ -53,7 +53,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "husky install",
+    "prepare": "husky",
     "lint": "prettier --check --no-error-on-unmatched-pattern 'src/**/*.{js,jsx,ts,tsx,json,css,md}'",
     "format": "prettier --write --no-error-on-unmatched-pattern 'src/**/*.{js,jsx,ts,tsx,json,css,md}'",
     "version": "node scripts/changelog.mjs && git checkout -b \"prepare-v${npm_package_version}-$(date +%s)\" && git add --all && git commit --message \"chore(release): v${npm_package_version}\" && git push --set-upstream origin $(git branch --show-current)",
