--- a/docker/regtest/dockerfile-deps/joinmarket/directory_node/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/directory_node/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-slim-bookworm
+FROM python:3.11-slim-bookworm@sha256:614c8691ab74150465ec9123378cd4dde7a6e57be9e558c3108df40664667a4c
 
 RUN apt-get update \
     && apt-get install -qq --no-install-recommends gnupg tini procps vim git iproute2 supervisor \
@@ -7,21 +7,21 @@ RUN apt-get update \
        tor \
        && rm -rf /var/lib/apt/lists/*
 
-ENV REPO https://github.com/JoinMarket-Org/joinmarket-clientserver
-ENV REPO_BRANCH master
-ENV REPO_REF master
+ENV REPO=https://github.com/JoinMarket-Org/joinmarket-clientserver
+ENV REPO_BRANCH=master
+ENV REPO_REF=master
 
 WORKDIR /src
 RUN git clone "$REPO" . --depth=10 --branch "$REPO_BRANCH" && git checkout "$REPO_REF"
 
 RUN ./install.sh --docker-install --disable-os-deps-check --disable-secp-check --without-qt
 
-ENV DATADIR /root/.joinmarket
-ENV CONFIG ${DATADIR}/joinmarket.cfg
-ENV DEFAULT_CONFIG /root/default.cfg
-ENV DEFAULT_AUTO_START /root/autostart
-ENV AUTO_START ${DATADIR}/autostart
-ENV PATH /src/scripts:$PATH
+ENV DATADIR=/root/.joinmarket
+ENV CONFIG=${DATADIR}/joinmarket.cfg
+ENV DEFAULT_CONFIG=/root/default.cfg
+ENV DEFAULT_AUTO_START=/root/autostart
+ENV AUTO_START=${DATADIR}/autostart
+ENV PATH=/src/scripts:$PATH
 
 WORKDIR /src/scripts
 
