--- a/docker/regtest/dockerfile-deps/bitcoin/regtest-initializer/Dockerfile
+++ b/docker/regtest/dockerfile-deps/bitcoin/regtest-initializer/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.16
+FROM alpine:3.21@sha256:a8560b36e8b8210634f77d9f7f9efd7ffa463e380b75e2e74aff4511df3ef88c
 
 # install build dependencies
 RUN apk add --no-cache --update curl jq
