--- a/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/default.cfg
+++ b/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/default.cfg
@@ -377,6 +377,11 @@ size_factor = 0.1
 
 gaplimit = 6
 
+# Disable the caching of addresses and scripts when
+# syncing the wallet. You DO NOT need to set this to 'true',
+# unless there is an issue of file corruption or a code bug.
+wallet_caching_disabled = false
+
 [SNICKER]
 # Any other value than 'true' will be treated as False,
 # and no SNICKER actions will be enabled in that case:
