--- a/docker/regtest/dockerfile-deps/nginx/default.conf.template
+++ b/docker/regtest/dockerfile-deps/nginx/default.conf.template
@@ -1,6 +1,6 @@
 # To test the reverse proxy setup, run the dev server using:
 #
-# PUBLIC_URL=/joinmarket npm start
+# PUBLIC_URL=/joinmarket npm run dev
 #
 # And visit http://localhost:8000/joinmarket/extrapath/
 # Note: Keep the trailing slash!
