--- a/docker/regtest/docker-compose-common.yml
+++ b/docker/regtest/docker-compose-common.yml
@@ -40,3 +40,10 @@ services:
     expose:
       - 80    # nginx
       - 28183 # jmwalletd api
+    healthcheck:
+      test: [ "CMD", "dinitctl", "status", "jmwalletd" ]
+      interval: 10s
+      timeout: 10s
+      retries: 20
+      start_period: 60s
+      start_interval: 3s
