--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/classnames": "^2.3.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.8.5",
+    "@types/node": "^22.15.2",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^18.3.12",
+    "@types/react": "^18.3.20",
+    "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.3.1",
+    "@types/react-i18next": "^7.8.3",
     "conventional-changelog": "^6.0.0",
     "http-proxy-middleware": "^3.0.3",
     "husky": "^9.1.7",
