chore: update regtest deps (#882)
* dev(regtest): update ergochat to v2.15.0

* dev(regtest): add new config param wallet_caching_disabled

* dev(regtest): update bitcoin core to v28

* dev(regtest): detach and wait for docker services

* dev(regtest): pin nginx image version

* dev(regtest): add healthcheck to bitcoind

* dev(regtest): add healtcheck to secondary jm containers

* dev(regtest): add healthcheck to primary jm containers

* dev(regtest): add healthcheck to nginx

* dev(regtest): update vanitytorgen repo ref

--- a/docker/regtest/docker-compose-common.yml
+++ b/docker/regtest/docker-compose-common.yml
@@ -21,6 +21,13 @@ services:
       - 62601 # obwatch
       - 28183 # jmwalletd api
       - 28283 # jmwalletd websocket
+    healthcheck:
+      test: ["CMD", "supervisorctl", "status"]
+      interval: 10s
+      timeout: 10s
+      retries: 20
+      start_period: 60s
+      start_interval: 3s
 
   joinmarket_jam_standalone:
     build:
@@ -40,3 +47,10 @@ services:
     expose:
       - 80    # nginx
       - 28183 # jmwalletd api
+    healthcheck:
+      test: [ "CMD", "dinitctl", "status", "jmwalletd" ]
+      interval: 10s
+      timeout: 10s
+      retries: 20
+      start_period: 60s
+      start_interval: 3s
