feat: Add auto-generated API client

--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "build-storybook": "storybook build",
     "prepare": "husky install",
     "test": "vitest run",
-    "regtest:rebuild": "docker-compose -f docker/regtest/docker-compose.yml build --no-cache",
-    "regtest:up": "cd docker/regtest && ./prepare-setup.sh && docker-compose up -d",
-    "regtest:restart": "docker-compose -f docker/regtest/docker-compose.yml restart joinmarket",
-    "regtest:init": "cd docker/regtest && ./init-setup.sh",
-    "regtest:mine": "cd docker/regtest && ./mine-block.sh",
-    "regtest:fund": "cd docker/regtest && ./fund-wallet.sh",
-    "regtest:down": "docker-compose -f docker/regtest/docker-compose.yml down",
-    "regtest:clear": "docker-compose -f docker/regtest/docker-compose.yml down -v",
-    "regtest:logs": "docker-compose -f docker/regtest/docker-compose.yml logs -f",
-    "regtest:status": "docker-compose -f docker/regtest/docker-compose.yml ps"
+    "regtest:build": "npm run regtest:clear && docker compose --env-file docker/regtest/.env.example --file docker/regtest/docker-compose.yml build --pull",
+    "regtest:rebuild": "rm -rf docker/regtest/.tmp && npm run regtest:build -- --no-cache",
+    "regtest:clear": "docker compose --env-file docker/regtest/.env.example --file docker/regtest/docker-compose.yml down --volumes --remove-orphans",
+    "regtest:up": "./docker/regtest/prepare-setup.sh && docker compose --env-file docker/regtest/.env.generated --file docker/regtest/docker-compose.yml up --detach --wait --wait-timeout 120",
+    "regtest:logs": "docker compose --env-file docker/regtest/.env.example --file docker/regtest/docker-compose.yml logs --follow",
+    "regtest:down": "docker compose --env-file docker/regtest/.env.example --file docker/regtest/docker-compose.yml down",
+    "regtest:logs:jmwalletd": "docker exec -t jm_regtest_joinmarket tail -f /var/log/jam/jmwalletd_stdout.log",
+    "regtest:logs:schedule": "docker exec -t jm_regtest_joinmarket tail -f /root/.joinmarket/logs/TUMBLE.schedule",
+    "regtest:logs:directory_node": "docker exec -t jm_regtest_joinmarket_directory_node tail -f /var/log/jam/directory_node_stdout.log -n 200",
+    "regtest:init": "./docker/regtest/init-setup.sh",
+    "regtest:mine": "watch -n 11 ./docker/regtest/mine-block.sh"
   },
   "dependencies": {
+    "@hey-api/client-fetch": "^0.13.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
