--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "regtest:init": "./docker/regtest/init-setup.sh",
     "regtest:mine": "watch -n 11 ./docker/regtest/mine-block.sh"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --fix"
+  },
   "dependencies": {
     "@hey-api/client-fetch": "^0.13.1",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -38,6 +41,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "conventional-changelog": "^7.1.0",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
@@ -67,6 +71,7 @@
     "eslint-plugin-storybook": "^9.0.3",
     "globals": "^16.0.0",
     "husky": "^8.0.0",
+    "lint-staged": "^16.1.2",
     "playwright": "^1.52.0",
     "storybook": "^9.0.3",
     "tw-animate-css": "^1.3.3",
