--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "format": "npm run lint -- --fix && npm run prettier",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
@@ -25,7 +27,16 @@
     "regtest:mine": "watch -n 11 ./docker/regtest/mine-block.sh"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --fix"
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,css,md}": "prettier --write"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "semi": false,
+    "singleQuote": true
   },
   "dependencies": {
     "@hey-api/client-fetch": "^0.13.1",
@@ -37,11 +48,8 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.80.6",
-    "@tanstack/react-query-devtools": "^5.80.6",
-    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "conventional-changelog": "^7.1.0",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
@@ -49,35 +57,38 @@
     "react-router-dom": "^7.6.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "tw-animate-css": "^1.3.4"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.0",
     "@eslint/js": "^9.25.0",
-    "@storybook/addon-a11y": "^9.0.3",
-    "@storybook/addon-docs": "^9.0.3",
-    "@storybook/addon-onboarding": "^9.0.3",
-    "@storybook/addon-vitest": "^9.0.3",
-    "@storybook/react-vite": "^9.0.3",
+    "@storybook/addon-a11y": "^9.0.11",
+    "@storybook/addon-docs": "^9.0.11",
+    "@storybook/addon-vitest": "^9.0.11",
+    "@storybook/react-vite": "^9.0.11",
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/browser": "^3.1.4",
-    "@vitest/coverage-v8": "^3.1.4",
+    "conventional-changelog": "^7.1.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-storybook": "^9.0.3",
+    "eslint-plugin-storybook": "^9.0.11",
     "globals": "^16.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^16.1.2",
     "playwright": "^1.52.0",
-    "storybook": "^9.0.3",
-    "tw-animate-css": "^1.3.3",
+    "prettier": "^3.5.3",
+    "storybook": "^9.0.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
     "vitest": "^3.1.4"
+  },
+  "overrides": {
+    "storybook": "$storybook"
   }
 }
