--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.0",
     "@eslint/js": "^9.29.0",
+    "@playwright/test": "^1.53.1",
     "@storybook/addon-a11y": "^9.0.12",
     "@storybook/addon-docs": "^9.0.12",
     "@storybook/addon-vitest": "^9.0.12",
@@ -80,7 +81,6 @@
     "globals": "^16.2.0",
     "husky": "^8.0.0",
     "lint-staged": "^16.1.2",
-    "playwright": "^1.53.1",
     "prettier": "^3.5.3",
     "storybook": "^9.0.12",
     "typescript": "~5.8.3",
