--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
   "prettier": {
     "printWidth": 120,
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   },
   "dependencies": {
     "@hey-api/client-fetch": "^0.13.1",
@@ -82,6 +85,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^16.1.2",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "storybook": "^9.0.12",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
