chore: Simplify import order configuration in Prettier

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,16 +3,5 @@
   "semi": false,
   "singleQuote": true,
   "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
-  "importOrder": [
-    "^react$",
-    "^react-dom(.*)$",
-    "<THIRD_PARTY_MODULES>",
-    "^@/lib/(.*)$",
-    "^@/hooks/(.*)$",
-    "^@/components/(.*)$",
-    "^@/constants/(.*)$",
-    "^[./]"
-  ],
-  "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "importOrder": ["^react$", "^react-dom(.*)$", "<THIRD_PARTY_MODULES>", "^@/(.*)$", "^[./]"]
 }
