chore: Remove 'react-dom' from import order in Prettier configuration

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,5 @@
   "semi": false,
   "singleQuote": true,
   "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
-  "importOrder": ["^react$", "^react-dom(.*)$", "<THIRD_PARTY_MODULES>", "^@/(.*)$", "^[./]"]
+  "importOrder": ["^react$", "<THIRD_PARTY_MODULES>", "^@/(.*)$", "^[./]"]
 }
