--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "@tanstack/react-query": "^5.80.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.518.0",
     "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.3",
     "react-router-dom": "^7.6.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
